# RayTracerChallenge

./: .clang-format  .gitignore  CMakeLists.txt  RayTracerChallenge.sln
RTC/: RTC.csproj
RTC.Console/: Program.cs  RTC.Console.csproj
RTC.Console/Exercises/: Chapter1.cs  Chapter10.cs  Chapter11.cs  Chapter12.cs  Chapter2.cs  Chapter3.cs  Chapter5.cs  Chapter6.cs  Chapter7.cs  Chapter9.cs  ChapterOne.cs  ChapterTwo.cs  IChapterExercise.cs
RTC.Console/Exercises/Structs/: Environment.cs  Projectile.cs
RTC.UnitTests/: RTC.UnitTests.csproj
RTC.UnitTests/Datastructures/: IntersectionSetUnitTests.cs  MatrixUnitTests.cs  Vec4UnitTests.cs
RTC.UnitTests/Objects/: CameraUnitTests.cs  CanvasUnitTests.cs  CubeUnitTests.cs  MaterialUnitTests.cs  PlaneUnitTests.cs  RayUnitTests.cs  SphereUnitTests.cs
RTC.UnitTests/Primitives/: IntersectionSetUnitTests.cs  PrecomputeUnitTests.cs  WorldUnitTests.cs
RTC.UnitTests/Primitives/Patterns/: CheckerPatternUnitTests.cs  GradientPatternUnitTests.cs  RingPatternUnitTests.cs  StripePatternUnitTests.cs
RTC/Datastructures/: Intersection.cs  IntersectionSet.cs  Matrix.cs  MatrixStaticMethods.cs  Vec4.cs
RTC/Helpers/: Helper.cs  Helpers.cs
RTC/Objects/: Camera.cs  Canvas.cs  Colour.cs  Cube.cs  Material.cs  Plane.cs  PointLight.cs  Ray.cs  Shape.cs  Sphere.cs
RTC/Primitives/: Colour.cs  Intersection.cs  IntersectionSet.cs  Material.cs  Precompute.cs  World.cs
RTC/Primitives/Patterns/: BlendedPattern.cs  CheckerPattern.cs  GradientPattern.cs  Pattern.cs  RadialGradiantPattern.cs  RingPattern.cs  SolidPattern.cs  StripePattern.cs  TestPattern.cs
exercises/: CMakeLists.txt  chapter1.cpp  chapter10.cpp  chapter11.cpp  chapter12.cpp  chapter2.cpp  chapter3.cpp  chapter4.cpp  chapter5.cpp  chapter6.cpp  chapter7.cpp  chapter8.cpp  chapter9.cpp
include/RayTracerChallenge/datastructures/: canvas.h  canvas.hpp  colour_tuple.h  colour_tuple.hpp  coord_tuple.h  coord_tuple.hpp  intersection.hpp  matrix.hpp  object.hpp  ray.hpp  sphere.hpp  tuple.h
include/RayTracerChallenge/helpers/: helpers.h  helpers.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/RayTracerChallenge_Lib/: CMakeLists.txt
src/RayTracerChallenge_Lib/datastructures/: colour_tuple.cpp  coord_tuple.cpp  matrix.cpp  vec4.cpp
src/RayTracerChallenge_Lib/helpers/: helpers.cpp
src/RayTracerChallenge_Lib/include/RayTracerChallenge/datastructures/: colour_tuple.hpp  coord_tuple.hpp  matrix.hpp  vec4.hpp
src/RayTracerChallenge_Lib/include/RayTracerChallenge/helpers/: helpers.hpp
src/RayTracerChallenge_Lib/include/RayTracerChallenge/objects/: camera.hpp  canvas.hpp  colour.hpp  cube.hpp  intersection.hpp  light.h  light.hpp  material.h  material.hpp  object.hpp  patterns.hpp  plane.hpp  precompute.hpp  ray.hpp  sphere.hpp  test_shape.hpp  world.hpp
src/RayTracerChallenge_Lib/objects/: camera.cpp  canvas.cpp  colour.cpp  cube.cpp  intersection.cpp  light.cpp  material.cpp  patterns.cpp  plane.cpp  precompute.cpp  ray.cpp  sphere.cpp  test_shape.cpp  world.cpp
src/datastructures/: CMakeLists.txt  canvas.cpp  colour_tuple.cpp  coord_tuple.cpp  intersection.cpp  matrix.cpp  ray.cpp  tuple.cpp
src/helpers/: CMakeLists.txt  helpers.cpp
tests/: CMakeLists.txt  TupleTests.cpp
tests/datastructures/: canvas_tests.cpp  colour_tuple_tests.cpp  coord_tuple_tests.cpp  intersection_tests.cpp  matrix_tests.cpp  ray_tests.cpp  vec4_tests.cpp
tests/objects/: camera_tests.cpp  canvas_tests.cpp  colour_tests.cpp  cube_tests.cpp  intersection_tests.cpp  material_tests.cpp  patterns_tests.cpp  plane_tests.cpp  precompute_tests.cpp  ray_tests.cpp  sphere_tests.cpp  test_shape_tests.cpp  world_tests.cpp
