add_executable(Chapter1 chapter1.cpp)
target_link_libraries(Chapter1 PRIVATE rtc::lib)
set_property(TARGET Chapter1 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter1 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter2 chapter2.cpp)
target_link_libraries(Chapter2 PRIVATE rtc::lib)
set_property(TARGET Chapter2 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter2 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter3 chapter3.cpp)
target_link_libraries(Chapter3 PRIVATE rtc::lib)
set_property(TARGET Chapter3 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter3 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter4 chapter4.cpp)
target_link_libraries(Chapter4 PRIVATE rtc::lib)
set_property(TARGET Chapter4 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter4 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter5 chapter5.cpp)
target_link_libraries(Chapter5 PRIVATE rtc::lib)
set_property(TARGET Chapter5 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter5 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter6 chapter6.cpp)
target_link_libraries(Chapter6 PRIVATE rtc::lib)
set_property(TARGET Chapter6 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter6 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter7 chapter7.cpp)
target_link_libraries(Chapter7 PRIVATE rtc::lib)
set_property(TARGET Chapter7 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter7 PROPERTY CXX_STANDARD_REQUIRED ON)
