add_executable(Chapter1 chapter1.cpp)
target_link_libraries(Chapter1 PRIVATE rtc::lib)
set_property(TARGET Chapter1 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter1 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter2 chapter2.cpp)
target_link_libraries(Chapter2 PRIVATE rtc::lib)
set_property(TARGET Chapter2 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter2 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter3 chapter3.cpp)
target_link_libraries(Chapter3 PRIVATE rtc::lib)
set_property(TARGET Chapter3 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter3 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter4 chapter4.cpp)
target_link_libraries(Chapter4 PRIVATE rtc::lib)
set_property(TARGET Chapter4 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter4 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter5 chapter5.cpp)
target_link_libraries(Chapter5 PRIVATE rtc::lib)
set_property(TARGET Chapter5 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter5 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter6 chapter6.cpp)
target_link_libraries(Chapter6 PRIVATE rtc::lib)
set_property(TARGET Chapter6 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter6 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter7 chapter7.cpp)
target_link_libraries(Chapter7 PRIVATE rtc::lib)
set_property(TARGET Chapter7 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter7 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter8 chapter8.cpp)
target_link_libraries(Chapter8 PRIVATE rtc::lib)
set_property(TARGET Chapter8 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter8 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter9 chapter9.cpp)
target_link_libraries(Chapter9 PRIVATE rtc::lib)
set_property(TARGET Chapter9 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter9 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter10 chapter10.cpp)
target_link_libraries(Chapter10 PRIVATE rtc::lib)
set_property(TARGET Chapter10 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter10 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter11 chapter11.cpp)
target_link_libraries(Chapter11 PRIVATE rtc::lib)
set_property(TARGET Chapter11 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter11 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(Chapter12 chapter12.cpp)
target_link_libraries(Chapter12 PRIVATE rtc::lib)
set_property(TARGET Chapter12 PROPERTY CXX_STANDARD 23)
set_property(TARGET Chapter12 PROPERTY CXX_STANDARD_REQUIRED ON)
